--- a/public/index.html
+++ b/public/index.html
@@ -10,27 +10,7 @@
       content="Web site created using create-react-app"
     />
     <link rel="manifest" href="/manifest.json" />
-    <style>
-      html {
-        height: 100%;
-        width: 100%;
-      }
-      body {
-        height: 100%;
-        width: 100%;
-        margin: 0;
-        padding: 0;
-      }
-      #root {
-        height: 100%;
-        width: 100%;
-        display: grid;
-        grid-template-columns: repeat(7, 1fr);
-        grid-template-rows: repeat(7, 1fr);
-        grid-column-gap: 0px;
-        grid-row-gap: 0px;
-      }
-    </style>
+    <link rel="stylesheet" href="styles.css" />
     <title>CEELO React</title>
   </head>
   <body>
